doc index → guides/getting-started

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=docs/id-of-doc-to-land-on.html">
     <script type="text/javascript">
-      window.location.href = 'docs/index.html';
+      window.location.href = 'docs/guides/getting-started.html';
     </script>
     <title>Bernard Docs</title>
   </head>
   <body>
-    If you are not redirected automatically, follow this <a href="docs/index.html">link</a>.
+    If you are not redirected automatically, follow this <a href="docs/guides/getting-started.html">link</a>.
   </body>
 </html>
